lab 1: add test file

--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -36,13 +36,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "XML_TRAINING_FILE_PATH = \"./data/train.xml\"\n",
-    "XML_TEST_FILE_PATH = \"./data/test.xml\"\n",
-    "PREDICTED_RESULT_PATH = \"./data/result.json\""
+    "XML_TEST_FILE_PATH = \"./data/Test_Procody.xml\"\n",
+    "PREDICTED_RESULT_PATH = \"./data/Test_Procody.json\""
    ]
   },
   {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -205,7 +205,7 @@
        " ['undefined', 0, 0, 0]]"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -243,7 +243,7 @@
        " 'words_before': 0}"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
        "0.8463472855112936"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -460,9 +460,9 @@
       "       False       0.97      0.94      0.95      9839\n",
       "        True       0.94      0.97      0.96      9861\n",
       "\n",
-      "    accuracy                           0.96     19700\n",
-      "   macro avg       0.96      0.96      0.96     19700\n",
-      "weighted avg       0.96      0.96      0.96     19700\n",
+      "    accuracy                           0.95     19700\n",
+      "   macro avg       0.96      0.95      0.95     19700\n",
+      "weighted avg       0.96      0.95      0.95     19700\n",
       "\n"
      ]
     }
@@ -484,14 +484,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Количество исключений: 0\n"
+      "Количество исключений: 8\n"
      ]
     }
    ],
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
