--- a/lab2_graphemes_to_allophones.ipynb
+++ b/lab2_graphemes_to_allophones.ipynb
@@ -795,7 +795,7 @@
         "                \"allophones\": predictions[i].split()\n",
         "            }\n",
         "        )\n",
-        "    with open(\"./data/output.json\", 'w', encoding='utf-8') as json_file:\n",
+        "    with open(\"./data/output_lab2_g2a.json\", 'w', encoding='utf-8') as json_file:\n",
         "        json.dump([{\"words\": results}], json_file, ensure_ascii=False, indent=4)"
       ]
     },
