--- a/lab2_word_to_allophones.ipynb
+++ b/lab2_word_to_allophones.ipynb
@@ -839,7 +839,7 @@
         "                \"allophones\": predictions[i].split()\n",
         "            }\n",
         "        )\n",
-        "    with open(\"./data/output_word_to_allophones.json\", 'w', encoding='utf-8') as json_file:\n",
+        "    with open(\"./data/output_lab2_w2a.json\", 'w', encoding='utf-8') as json_file:\n",
         "        json.dump([{\"words\": results}], json_file, ensure_ascii=False, indent=4)"
       ]
     }
