--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -203,7 +203,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55b6d75f6f0349629ddc71efaaa9492c",
+       "model_id": "bef5218df74b4611ab4eb3dd5ec8f76c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -735,18 +735,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "29c4c38fad2f4a16a5eed10edd937462",
+       "model_id": "44e2c1821a384968b5f918af9cf16e9b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/4490 [00:00<?, ?it/s]"
+       "  0%|          | 0/200 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -754,7 +754,7 @@
     }
    ],
    "source": [
-    "test_sentences = read_xml(\"./data/train.xml\", train=False)\n",
+    "test_sentences = read_xml(\"./data/input_lab3.xml\", train=False)\n",
     "test_dataset = [\n",
     "    allophones_features\n",
     "    for sentence in tqdm(test_sentences)\n",
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
